--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Impedir-->
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
     <!--Titulo da Janela-->
     <title>Sticky Notes</title>
+    <!--Bootstrap-->
+    <link rel="stylesheet" href="../public/css/bootstrap.min.css">
+    <!-- CSS Personalizado ATENÇÃO!!! sempre apos o CSS do Bootstrap-->
+    <link rel="stylesheet" href="../public/css/style.css">
 </head>
+
 <body>
-    <h1>Hello Etectrom</h1>
-    
-    
+    <div class="container">
+        <h1>Hello Etectrom</h1>
+        <button type="button" class="btn btn-primary">Hello Bootstrap</button>
+    </div>
+
+    <footer>
+        <p id="dataAtual"></p>
+        <img src="../public/img/dboff.png" alt="icone">
+    </footer>
+
+    <!--Boodstrap-->
+    <script src="../public/js/bootstrap.min.js"></script>
+
+    <!--Processo de Renderização-->
+    <script src="renderer.js"></script>
 </body>
+
 </html>
