--- a/src/views/index.html
+++ b/src/views/index.html
@@ -22,7 +22,7 @@
 
     <footer>
         <p id="dataAtual"></p>
-        <img src="../public/img/dboff.png" alt="icone">
+        <img src="../public/img/dboff.png" alt="icone banco de dados" id="iconeDB">
     </footer>
 
     <!--Boodstrap-->
