--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,7 +16,8 @@
 
 <body>
     <div class="container">
-        
+        <!-- Renderizar as notas (li sera gerado de forma dinamica pelo Js de acordo com o numero de notas)-->
+         <ul id="listNotes"></ul>
     </div>
 
     <footer>
