--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,7 +9,7 @@
     <!--Titulo da Janela-->
     <title>Sticky Notes</title>
     <!--Bootstrap-->
-    <link rel="stylesheet" href="../public/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="../public/css/bootstrap.min.css">-->
     <!-- CSS Personalizado ATENÇÃO!!! sempre apos o CSS do Bootstrap-->
     <link rel="stylesheet" href="../public/css/style.css">
 </head>
